# physical-ai-humanoid-textbook

./: .env.example  .gitignore  404.html  BACKEND_FIX_REPORT.md  DEPENDENCY_AUDIT_REPORT.md  DEPLOYMENT.md  FASTAPI_ROUTES_SCAN.md  GITHUB_PAGES_DEPLOYMENT_GUIDE.md  INTEGRATION_FIX_REPORT.md  RAILWAY_DEPLOYMENT_GUIDE.md  chat.html  docusaurus.config.ts  index.html  markdown-page.html  package-lock.json  package.json  sidebars.ts  sitemap.xml  test-chatbot.html  tsconfig.json
backend/: .env.example  README.md  create_tables.py  main.py  pyproject.toml  pyproject.toml.save  requirements.txt  verify_config.py
backend/app/: main.py
backend/app/api/: chat.py  deps.py
backend/app/api/v1/: __init__.py  chat.py  health.py  router.py  sessions.py
backend/app/api/v1/endpoints/: admin.py  query.py  translate.py
backend/app/core/: __init__.py  config.py  deps.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  qdrant.py  session.py
backend/app/middleware/: rate_limit.py
backend/app/models/: chunk.py  database.py  request.py  response.py  schemas.py  translation.py
backend/app/services/: __init__.py  chat_storage.py  chunker.py  embedder.py  embeddings.py  indexer.py  parser.py  qdrant.py  qdrant_client.py  rag.py  responder.py  retriever.py  translation.py
backend/scripts/: README.md  index_docs.py  index_textbook.py  init_db.py  reindex_content.py
backend/tests/api/: test_rate_limiting_integration.py  test_translate_endpoints.py
backend/tests/middleware/: test_rate_limit.py
backend/tests/models/: test_translation_models.py
backend/tests/services/: test_translation_service.py
docs/: developer-guide-translation.html  developer-guide-translation.md  intro.html  intro.md  translation.html  translation.md
ur/: 404.html  chat.html  index.html  markdown-page.html  sitemap.xml
(+273 files in other folders)
