[project]
name = "rag-backend"
version = "0.1.0"
description = "RAG Backend & Study Assistant API for Physical AI Textbook"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "qdrant-client>=1.7.0",
    "openai>=1.10.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.11",
    "python-frontmatter>=1.0.0",
    "tiktoken>=0.5.2",
    "httpx>=0.26.0",
    "sqlalchemy>=2.0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.hatch.build.targets.wheel]
packages = ["app"]
